--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@ body {
 	animation: opacityFallbackOut 0.5s step-end forwards;
 	backface-visibility: hidden;
 	background-color: #000e4e;
+	color: #4077c9;
 	clip-path: polygon(-1% 0, 0 0, -25% 100%, -1% 100%);
 	content: "";
 	height: 100%;
@@ -93,7 +94,6 @@ body {
 	transition: clip-path 0.5s cubic-bezier(0.165, 0.84, 0.44, 1),
 		-webkit-clip-path 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
 	width: 100%;
-	color: #4077c9;
 }
 .new-btn:hover:before {
 	animation: opacityFallbackIn 0s step-start forwards;
@@ -183,6 +183,7 @@ body {
 	font-size: 9vmin;
 	transform: scale(1.25);
 }
+
 .ttt {
 	color: #002b5c;
 	font-size: 6vmin;
@@ -268,9 +269,123 @@ a {
 	transition: all ease-in-out 0.3s;
 }
 
+.help {
+	text-overflow: ellipsis;
+	font-weight: 900;
+	text-align: center;
+	height: 45px;
+	width: 45px;
+	position: fixed;
+	bottom: 40px;
+	left: 40px;
+	align-items: center;
+	background-color: #4077c9;
+	color: #000e4e;
+	opacity: 0.5;
+	border: none;
+	border-radius: 50px;
+	padding: 10px 10px;
+	cursor: pointer;
+	box-shadow: 5px 2px 4px rgba(0, 0, 0, 0.7);
+	transition: all 0.5s ease;
+	font-size: 13px;
+	overflow: hidden;
+	white-space: nowrap;
+	font-weight: 900;
+}
+.help:hover {
+	opacity: 1;
+	height: 45px;
+	width: 455px;
+	font-size: 1.5em;
+	padding: 10px 20px;
+	border-radius: 10px;
+	background-color: #000e4e;
+	color: #4077c9;
+}
+
 .hide {
 	display: none;
 }
+
+h5 {
+	margin: 5% 5% 5% 5%;
+	padding: 5% 5% 5% 5%;
+	position: static;
+	color: #034a57;
+	transition: all ease-in-out 0.3s;
+	text-align: justify;
+	text-justify: auto;
+	font-size: 2.5vmin;
+	font-family: cursive;
+}
+/* For Index page |down onward| */
+.gamemode {
+	color: #0e8aa0;
+	font-size: 3vmin;
+	transition: ease 0.3s;
+}
+
+.gamemode:hover {
+	color: #002b5c;
+	transform: scale(1.25);
+}
+
+#spbtn {
+	position: relative;
+	top: 0px;
+	left: -125px;
+	background-color: #4077c9;
+	color: #000e4e;
+	opacity: 1;
+	border: none;
+	font-weight: 800;
+	border-radius: 3px;
+	padding: 10px 20px;
+	cursor: pointer;
+	box-shadow: 5px 2px 4px rgba(0, 0, 0, 0.7);
+	transition: all 0.2s linear;
+	font-size: 13px;
+	overflow: hidden;
+}
+#spbtn:hover {
+	opacity: 1;
+	box-shadow: rgba(0, 0, 0, 1);
+	transform: scale(1.025);
+	background-color: #000e4e;
+	border-radius: 50px;
+	color: #4077c9;
+	font-weight: 900;
+}
+
+#mpbtn {
+	position: relative;
+	top: 0px;
+	left: 75px;
+	background-color: #4077c9;
+	color: #000e4e;
+	opacity: 1;
+	border: none;
+	font-weight: 800;
+	border-radius: 3px;
+	padding: 10px 20px;
+	cursor: pointer;
+	box-shadow: 5px 2px 4px rgba(0, 0, 0, 0.7);
+	transition: all 0.3s linear;
+	font-size: 13px;
+	overflow: hidden;
+}
+#mpbtn:hover {
+	opacity: 1;
+	box-shadow: rgba(0, 0, 0, 1);
+	transform: scale(1.025);
+	background-color: #000e4e;
+	border-radius: 50px;
+	color: #4077c9;
+	font-weight: 900;
+}
+
+/* For responsive website */
 @media only screen and (max-width: 1137px) {
 	.msg {
 		color: #002b5c;
@@ -284,7 +399,7 @@ a {
 		transition: ease 0.3s;
 	}
 }
-@media only screen and (max-width: 1024px 1336px) {
+@media only screen and (max-width: 1024px) and (max-height: 1336px) {
 	.new-btn {
 		appearance: none;
 		background-color: #4077c9;
@@ -454,8 +569,11 @@ a {
 		font-size: 10vmin;
 		transition: ease 0.3s;
 	}
+	#spbtn {
+		left: 0.0001px;
+	}
 }
-@media only screen and (max-width: 912px 1368px) {
+@media only screen and (max-width: 912px) and (max-height: 1368px) {
 	.new-btn {
 		appearance: none;
 		background-color: #4077c9;
@@ -534,8 +652,9 @@ a {
 		transition: ease 0.3s;
 	}
 	#credit {
-		position: fixed;
+		position: static;
 		bottom: 25%;
+		left: 2%;
 	}
 
 	.container {
@@ -546,7 +665,7 @@ a {
 		align-items: center;
 	}
 }
-@media only screen and (max-width: 820px 1180px) {
+@media only screen and (max-width: 820px) and (max-height: 1180px) {
 	.new-btn {
 		appearance: none;
 		background-color: #4077c9;
@@ -626,7 +745,7 @@ a {
 	}
 	#credit {
 		position: fixed;
-		bottom: 25%;
+		bottom: 22%;
 	}
 
 	.container {
@@ -637,8 +756,7 @@ a {
 		align-items: center;
 	}
 }
-
-@media only screen and (max-width: 768px 1024px) {
+@media only screen and (max-width: 768px) and (max-height: 1024px) {
 	.new-btn {
 		appearance: none;
 		background-color: #4077c9;
@@ -763,5 +881,23 @@ a {
 		bottom: 0.2%;
 		left: 6.75%;
 		right: 4%;
+	}
+	.gamemode {
+		position: fixed;
+		top: 64%;
+		left: 36.5%;
+		font-size: 20px;
+	}
+	#spbtn {
+		position: fixed;
+		width: 250px;
+		top: 70%;
+		left: 17.5%;
+	}
+	#mpbtn {
+		position: fixed;
+		width: 250px;
+		top: 77%;
+		left: 17.5%;
 	}
 }
